...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssessmentExcitementRatingActivity">

    <RatingBar
        android:id="@+id/ratingBar_excitement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:rating="1"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_excitement_next"
        android:layout_width="156dp"
        android:layout_height="52dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_shape"
        android:text="@string/next"
...
