<?xml version="1.0" encoding="utf-8"?>
<!-- The layout for the cards that display a user's learning goals -->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    card_view:cardCornerRadius="35dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/card_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:scaleType="fitCenter"
            android:contentDescription="@string/the_goal_progress_icon" />

    </LinearLayout>

</androidx.cardview.widget.CardView>