<?xml version="1.0" encoding="utf-8"?>
<!-- The layout for the screen where a user can view the learning material for a topic -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ExploreTopicActivity">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/topic_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_complete_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:text="@string/complete_topic"
        android:textColor="@color/white"
        android:backgroundTint="@color/green_500"
        app:icon="@drawable/ic_baseline_check_24"
        app:iconTint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>