<?xml version="1.0" encoding="utf-8"?>
<!-- The layout for the screen where a user can set themself a learning goal -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/set_goal_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GoalSetActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        android:gravity="start|top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/new_goal_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/new_goal"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <Spinner
            android:id="@+id/spinner_choose_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/spinner_set_goal_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/goal_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Goal selected"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="28sp"
            android:textStyle="bold" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_set_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_margin="24dp"
            android:contentDescription="@string/set_goal"
            android:text="@string/set_goal"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:backgroundTint="@color/green_500" />

    </LinearLayout>

</LinearLayout>