<?xml version="1.0" encoding="utf-8"?>
<!-- The layout for the screen where a user can view the list of their learning goals -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GoalsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <androidx.fragment.app.FragmentContainerView
        android:name="com.dd.turtleworld.GoalListFragment"
        android:id="@+id/fragment_container_goals"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/green_500"
        android:text="@string/add_goal"
        android:textColor="@color/white"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconTint="@color/white"
        android:contentDescription= "@string/add_goal" />

</LinearLayout>