...
    <string name="reset_info">Resetting your profile will reset all completed topics/quizzes and delete all of your goals</string>

    <!-- Goals -->
    <string name="new_goal">New goal</string>
    <string-array name="spinnner_values_choose_goal">
        <item><i>Choose the type of goal…</i></item>
        <item>Complete a number of quizzes</item>
        <item>Engage with a number of topics</item>
    </string-array>
    <string-array name="spinnner_values_set_goal_target">
        <item><i>Set goal target…</i></item>
        <item>1</item>
        <item>2</item>
...
